edits, additional references

--- a/execsum.tex
+++ b/execsum.tex
@@ -1,6 +1,6 @@
 \vspace{0.5cm}
 The Deep Underground Neutrino Experiment (DUNE) will use a large liquid argon (LAr) detector to measure the CP violating phase, determine the neutrino mass hierarchy and perform precision tests of the three-flavor paradigm in long-baseline neutrino oscillations. The detector will consist of four modules 
-each with a fiducial volume of 10~kt of LAr and due to its unprecedented size will allow sensitive searches for proton decay and the detection and measurement of electron neutrinos from core collapse supernovae \cite{dunecdr}.
+each with a fiducial mass of 10~kt of LAr and due to its unprecedented size will allow sensitive searches for proton decay and the detection and measurement of electron neutrinos from core collapse supernovae \cite{dunecdr}.
 
 The first 10~kt module will use single-phase LAr detection technique and be itself modular in design. The successful manufacturing, installation and operation of several full-scale detector components in a suitable configuration represents a critical engineering milestone prior to the construction and operation of the first full 10~kt DUNE detector module at the SURF underground site. 
 A charged particle beam test of a prototype detector will provide critical
@@ -15,7 +15,7 @@ necessary to achieve these critical DUNE milestones.
 We propose to construct and operate a single-phase LAr detector with an active (total) LAr detector mass of 400~t (700~t). 
 The active LAr region measures 7.2 (width) $\times$ 7.0 (length) $\times$ 5.9~m$^3$ (height) on its sides.
 The detector components will be identical to what is currently foreseen for the first 10~kt DUNE detector module. The design incorporates the
-experience gained over many years of R\&D, in particular it benefits in many aspects from the 35~t prototype detector at Fermilab.
+experience gained over many years of R\&D, in particular it benefits in many aspects from the 35~t prototype detector at Fermilab \cite{montanari_35ton,montanari_35ton_perf}.
 
 The beam should provide different types of negatively and positively charged primary particles with 
 sub-GeV to several GeV in energy.
@@ -23,8 +23,10 @@ The anticipated beam measurement program
 is expected to last several weeks and should ideally be conducted prior to the second 
 long shutdown of the LHC in 2018. 
 
-The DUNE collaboration has identified the CERN single-phase LAr prototype detector (DUNE-PT) and beam test as a logical and critically important next
-step towards its ultimate goal of building and running the DUNE experiment \cite{dunecdr}. The anticipated proximity to and synergies with WA105 enhances collaboration and is expected to foster community building. We plan to work towards a direct detector performance comparison of single and double phase LAr data in this well characterized test environment. 
+The DUNE collaboration has identified the single-phase LAr prototype detector (DUNE-PT) and beam test at CERN as a logical and critically important next
+step towards its ultimate goal of building and running the DUNE experiment \cite{dunecdr}. The anticipated proximity to and synergies with WA105 \cite{WA105}, which is developing a complementary LAr TPC technology which could be employed by DUNE in some far 
+detector modules, 
+enhances collaboration and is expected to foster community building. We plan to work towards a direct detector performance comparison of single and double phase LAr data in this well characterized test environment. 
 %
 A strong, experienced and growing team within the DUNE collaboration is in place to carry out the proposed activities.
 
