--- a/APA-CP-FieldCage.tex
+++ b/APA-CP-FieldCage.tex
@@ -19,8 +19,10 @@
 \end{figure}
 
 
-Each APA (Fig.~\ref{fig:tpc_apa_overview}) is instrumented with 3 layers of signal wires, one longitudinal collection plane and two 35.7$^\circ$ angled induction planes with an additional outer grid plane that helps maintain the field. 
-The overall dimensions of the active area are 2.3 m wide and 6 m long. The dimension of the wire planes were selected to fit down the Ross shaft at SURF, the future location of the DUNE far detector, be compatible with a standard HiCube transport container, and allow construction from readily available materials.  The wire angle was selected so that a given angled induction wire will not overlay any longitudinal collection wire more than once in order to reduce ambiguities caused by the wrapped wire construction. Partial wire layers are shown in 
+Each APA (Fig.~\ref{fig:tpc_apa_overview}) is instrumented with 3 layers of signal wires, one collection plane with vertical wires and two 
+induction planes with wires at $\pm$35.7$^\circ$ to the vertical.
+An additional outer grid plane helps maintain the field. 
+The overall dimensions of the active area are 2.3~m wide and 5.9~m long. The dimension of the wire planes were selected to fit down the Ross shaft at SURF, the future location of the DUNE far detector, be compatible with a standard HiCube transport container, and allow construction from readily available materials.  The wire angle was selected so that a given angled induction wire will not overlay any longitudinal collection wire more than once in order to reduce ambiguities caused by the wrapped wire construction. Partial wire layers are shown in 
 Figure ~\ref{fig:tpc_apa_overview} at the bottom.  With a wire pitches of 4.67 mm (diagonal layers) and 4.79 (straight layers), the total number of readout channels in an APA is 2560.
 The grid layer is not depicted in Fig.~\ref{fig:tpc_apa_overview} for clarity. The underlying structure of each APA is a framework of rectangular, stainless steel tubing.  The side and bottom edges of the frame are lined with multiple layers of fiberglass circuit boards, notched along the edges to support and locate the wires that cross the APA face. A set of FR4 combs are glued to the APA frame to capture the wires at regular intervals. The front-end electronics boards are mounted at the top end of the frame and protected by a metal enclosure. 
 
