--- a/singlephasedet.tex
+++ b/singlephasedet.tex
@@ -2,7 +2,7 @@
 
 \subsection{DUNE detector plans}
 
-The far detector for the DUNE collaboration will be a series of four liquid argon TPCs, each in a cryostat that holds a fiducial/active/total LAr mass of 10.0/13.3/16.9~kt. The TPCs will be instrumented with a photon detection system. It is planned that the first 10~kt detector will be ready for installation in the 2022 timeframe. 
+The far detector for the DUNE collaboration will be a series of four liquid argon TPCs, each in a cryostat that holds a fiducial/active/total LAr mass of 10.0/13.3/17.1~kt. The TPCs will be instrumented with a photon detection system. It is planned that the first 10~kt detector will be ready for installation in the 2022 timeframe. 
 The design for the first 10~kt detector is a submerged wire plane-based TPC with electronic readout also in the liquid argon.  Designs of this style are referred to as single-phase detectors as the charge generation, drift, and detection all occurs in the liquid argon phase.  This style TPC features no charge amplification before collection, thereby making a very precise charge measurement possible. 
 
 
@@ -39,7 +39,7 @@ The engineering goals of the single-phase APA/CPA detector test can be broken in
 	\item production and installation procedure verification
 \end{enumerate}
 
-	 The goals related to mechanical testing are to test the integrity of the detector. In the current design, each APA measures 2.3 m by 6.0 m and includes 2560 wires and associated readout channels. Given the complexity of these assemblies, a test where the detector can be thermally cycled and tested under operating conditions is highly advisable prior to mass production. The mechanical support of the APAs can be tested to verify that the mechanical design is reliable and will accommodate any necessary motion between the large wire planes. The impact of vibration isolation between the cryostat roof and the detector can also be tested. Finally, an improvement over existing cryostat designs is the possibility to move the pumps external to the main cryostat. This will reduce any mechanical coupling to the detector and also greatly improve both reliability and ease of repair.
+	 The goals related to mechanical testing are to test the integrity of the detector. In the current design, each APA measures 2.3 m by 6.0 m and includes 2560 wires and associated readout channels. Given the complexity of these assemblies, a test where the detector can be cooled down and tested under operating conditions is highly advisable prior to mass production. The mechanical support of the APAs can be tested to verify that the mechanical design is reliable and will accommodate any necessary motion between the large wire planes. The impact of vibration isolation between the cryostat roof and the detector can also be tested. Finally, an improvement over existing cryostat designs is the possibility to move the pumps external to the main cryostat. This will reduce any mechanical coupling to the detector and also greatly improve both reliability and ease of repair.
 
 	 
 	 The electrical testing goals are to insure that the high voltage design is robust and that the required low electronic noise level can be achieved. As the detector scale increases so does the capacitance and the stored energy in the device. The design of the field cage and high voltage cathode planes needs to be such that HV discharge is unlikely and that if the event occurs no damage to the detector or cryostat results. The grounding and shielding of large detectors is also critical for low noise operation. By testing the full scale elements one insures that the grounding plan is fully developed and effective. Large scale tests of the resulting design will verify the electrical model of the detector. 
@@ -50,8 +50,8 @@ The engineering goals of the single-phase APA/CPA detector test can be broken in
 
 %\subsubsection{Overview of the CERN Single-Phase test Detector}
 
-This section presents the design details of a single-phase prototype detector based on the design by the former LBNE collaboration. 
-The DUNE detector design is very modular and the DUNE-PT will be constructed from modular components of exactly the same design.
+This section presents the design details of a single-phase prototype detector based on the design by the former LBNE collaboration \cite{LBNE-design}. 
+The DUNE detector design is modular and the DUNE-PT will be constructed from modular components of exactly the same design.
 
 \begin{figure}[htb]
 \centering
@@ -70,7 +70,7 @@ by itself and inside the cryostat at CERN.  A 500 V/cm uniform electric field is
 
 The TPC will be assembled from elements that are of the same size and materials as those planned for the first DUNE far detector module.  
 
-The overall size of the TPC has been determined based on the desired particle containment in order to address the required physics measurements (see Section \ref{detbeamtest}). The TPC will have a 3-APA wide active volume and consists of two drift volumes with a drift length of 3.6~m each (see Fig.~\ref{fig:CERNdet-overview}).  
+The overall size of the TPC has been determined based on the desired particle containment in order to address the required physics measurements (see Section \ref{detbeamtest}). The TPC will have an active volume that is 3 APAs long and consists of two drift volumes with a drift length of 3.6~m each (see Fig.~\ref{fig:CERNdet-overview}).  
 The APAs have an active (total) area measuring 2.29 m (2.32 m) wide and 5.9 m (6.2 m) high. The combination of the three APAs determines the overall TPC length to be 7.0~m. There will be a CPA in the center between the two rows of APAs.  
 The overall width of the TPC will be determined by the 7.4~m combination of the drift distances and the total thicknesses of the two APA planes and the CPAs.  
 The overall height of the TPC is determined by the height of the APA which is 6.2~m.  The TPC dimensions are summarized in 
@@ -104,7 +104,7 @@ A reduced drift distance between the APA and CPA represents a deviation from the
 useful in order to lessen the impact of space charge effects.
 Due to the operation of DUNE-PT on the surface, space charge 
  effects (discussed in Section~\ref{calibration}) are expected to be larger than for underground operation at SURF.
-We foresee to calibrate out any space charge effects for a 3.6~m drift distance using laser beam calibration and comics. 
+We foresee to calibrate out any space charge effects for a 3.6~m drift distance using laser beam calibration and cosmics. 
 At the same time we maintain the  possibility for a second test with reduced drift length if the uncertainties associated 
 with our calibration limit the precision of measurements.
 The cryostat would have to be emptied and the planes shifted to the 2.5~m drift distance.
